packages/svelte/tests/validator/samples/a11y-binding-focused/input.svelte
<script>
	let a = $state(0);
</script>

<input type="number" bind:focused={a} />
